# hellsmith-editor

./: .gitignore  Makefile  README.md  TODO  gdm413229.doom.hellsmith_gtk3.json  gdm413229.hellsmith_gtk3.json  gdm413229.hellsmith_gtk3.json~  meson.build
2d/: renderer_cmd.hpp  renderer_enums.hpp
data/: gdm413229.hellsmith_gtk3.appdata.xml.in  gdm413229.hellsmith_gtk3.desktop.in  gdm413229.hellsmith_gtk3.gschema.xml  hs_fortunes_generic.xml  hs_fortunes_linux.xml  meson.build
data/fonts/: smithtype_ui.sfd
po/: POTFILES  meson.build
src/: hellsmith_editor_gtk3-window.ui  hellsmith_editor_gtk3.gresource.xml  main.cpp  meson.build
src/2d/: renderer_api.hpp  renderer_structs.hpp
src/core/: dataread.cpp  dataread.hpp  dictsys.cpp  dictsys.hpp  serializer.cpp  serializer.hpp
src/core/forge/: doom_imglib.cpp  doom_imglib.hpp
src/core/wad/: wadlib.cpp  wadlib.hpp
src/scrgut/: scrgut.c  scrgut.h
src/ui/: hellsmith_editor_gtk3-window.cpp  hellsmith_editor_gtk3-window.h  hellsmith_editor_gtk3-window.ui~  inspector_template.ui~
